--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@types/lodash": "^4.14.202",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "element-plus": "^2.6.0",
     "lodash": "^4.17.21",
     "vue": "^3.4.19",
