--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@types/lodash": "^4.14.202",
     "@wangeditor/editor-for-vue": "^5.1.12",
+    "axios": "^1.6.7",
     "element-plus": "^2.6.0",
     "lodash": "^4.17.21",
     "vue": "^3.4.19",
